--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore node_modules in backend and frontend
 /backend/node_modules/
 /frontend/node_modules/
+/backend/dist/
+/frontend/build/
 
 # Ignore .env files but not .env.example
 /backend/.env
