--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.2",
+    "@types/ws": "^8.5.14",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.31",
     "@types/du": "^1.0.3",
+    "@types/socket.io": "^3.0.1",
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "commander": "^12.1.0",
@@ -54,7 +56,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.4",
+    "socket.io": "^4.8.1",
+    "systeminformation": "^5.25.11",
     "uuid": "^11.0.3",
+    "ws": "^8.18.0",
     "yup": "^1.6.1"
   }
 }
