--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,38 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
+    "build": "cross-env NODE_ENV=production react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc",
+    "serve": "node server.js"
   },
   "dependencies": {
-    "@react-router/node": "^7.1.3",
-    "@react-router/serve": "^7.1.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@react-router/node": "^7.1.1",
+    "@react-router/serve": "^7.1.1",
+    "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.1.3",
+    "@react-router/dev": "^7.1.1",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
+    "express": "^4.21.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
